--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,17 @@
   "name": "com.gurukirpa",
   "version": "1.0.0",
   "description": "This is a Billing Software Backend, which helps us to make the inventory systematically and help to make billing easy.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon src/index.ts"
   },
   "author": "Ishvinder",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.21"
+  }
 }
